--- a/_posts/2022-11-01-finished.md
+++ b/_posts/2022-11-01-finished.md
@@ -9,7 +9,7 @@ tags: [javascript, fetch, dom, getElementID, appendChild]
  
 <!-- HTML  fragment for page -->
  <div id="quiz_score_summary">
-    <!-- javascript generated data -->
+    <!-- javascript generated data -->0
     <h1>Your Quiz Summary</h1>
 </div>
 
@@ -17,8 +17,8 @@ tags: [javascript, fetch, dom, getElementID, appendChild]
 
   const resultContainer = document.getElementById("quiz_score_summary");
   // prepare fetch urls
-  // const url = "https://www.teamcheeseatimetime.tk/api/quiz";
-  const url = "http://localhost:5000/api/quiz" ;
+  const url = "https://www.teamcheeseatimetime.tk/api/quiz";
+  const urllocal = "http://localhost:5000/api/quiz" ;
   
   const summaryUrl = "/summary";
   // prepare fetch GET options
