minor hide edits

--- a/_posts/2022-11-01-finished.md
+++ b/_posts/2022-11-01-finished.md
@@ -3,6 +3,7 @@ title: Congrats, you completed the quiz!
 layout: default
 description: Our Frontend talking to Backend Python application serving questions.  This api allows us to get customer responses. 
 permalink: /data/quizfinish
+hide: true
 tags: [javascript, fetch, dom, getElementID, appendChild]
 ---
  
