--- a/_notebooks/2022-10-25-our-thing.ipynb
+++ b/_notebooks/2022-10-25-our-thing.ipynb
@@ -96,10 +96,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.12 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.12"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "289762bfef0c13eec96403755dc6a123221745d77b4e51a71a7ef5c7578571d1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
