trieed something? don't know if it works

--- a/_posts/2022-11-01-finished.md
+++ b/_posts/2022-11-01-finished.md
@@ -43,8 +43,8 @@ tags: [javascript, fetch, dom, getElementID, appendChild]
       }
       // valid response will have JSON data
       response.json().then(data => {
-          resultContainer.innerHTML =   '<pre>' + JSON.stringify(data, undefined, '\t') + '</pre>';
-          console.log(data)
+        console.log(data);
+        resultContainer.innerHTML =  <body> + JSON.stringify(data, undefined, '\t') + </body>;
       })
   })
   // catch fetch errors (ie Nginx ACCESS to server blocked)
