--- a/_posts/2022-11-01-finished.md
+++ b/_posts/2022-11-01-finished.md
@@ -44,7 +44,7 @@ tags: [javascript, fetch, dom, getElementID, appendChild]
       // valid response will have JSON data
       response.json().then(data => {
         console.log(data);
-        resultContainer.innerHTML =  <body> + JSON.stringify(data, undefined, '\t') + </body>;
+        resultContainer.innerHTML =  '<body>' + JSON.stringify(data, undefined, '\t') + '</body>';
       })
   })
   // catch fetch errors (ie Nginx ACCESS to server blocked)
